--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,24 @@
 spring:
+
+  # H2
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+
   datasource:
+    # MySQL
     driver-class-name: com.mysql.cj.jdbc.Driver
     url:
     username:
     password:
+
+    # h2
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:~/test
+#    username:
+#    password:
 
   jpa:
     hibernate:
