FEAT : signup 예외처리, WebSecurityCofig 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
     # h2
     driver-class-name: org.h2.Driver
     url: jdbc:h2:~/test
-    username:
-    password:
+    username: ggggraceful
+    password: test1234
 
   jpa:
     hibernate:
@@ -71,3 +71,4 @@ server:
 jwt:
   secret:
     key:
+
