--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,30 +9,30 @@ spring:
 
   datasource:
     # MySQL
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: ${DB_URL}
-#    username: ${DB_USERNAME}
-#    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
     # h2
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/test
-    username:
-    password:
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:~/test
+#    username:
+#    password:
 
   jpa:
     hibernate:
       ddl-auto: update
 
 
-#    properties:
-#      database: mysql
-#      hibernate:
-#        show_sql: true
-#        format_sql: true
-#        use_sql_comments: true
-#        dialect: org.hibernate.dialect.MySQLDialect
-#    generate-ddl: true
+    properties:
+      database: mysql
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
+        dialect: org.hibernate.dialect.MySQLDialect
+    generate-ddl: true
 
   mvc:
     path-match:
