--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
 #
   datasource:
     driver-class-name: org.h2.Driver
@@ -76,6 +77,12 @@ server:
 #      amazonaws:
 #        util:
 #          EC2MetadataUtils: ERROR
+
+logging:
+  level:
+    org:
+      springframework: DEBUG
+
 
 jwt:
   header: Authorization
